added first idea of footer and header style

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,137 @@
 .App {
-  text-align: center;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*Header*/
+
+.navbar {
+  background-color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.navbar > .nav-item > .nav-link {
+  font-size: 1.2em !important;
+  color: #303030;
+}
+
+.navbar-nav .nav-item .nav-link:link {
+  color: #303030; 
+}
+
+.navbar-nav .nav-item .nav-link:visited {
+  color: #303030;
+  text-decoration: underline; 
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+  color: #005050;
+  text-decoration: underline; 
+}
+
+.navbar-nav .nav-item .nav-link:active {
+  color: #005050;
+  text-decoration: underline; 
+}
+
+.navbar-nav .nav-item .nav-link:focus {
+  color: #005050;
+  text-decoration: underline; 
+}
+
+/* footer */
+
+.site-footer {
+  background-color: #353535;
+  padding: 20px 0;
+}
+
+.footer-link {
+  color: #B2DFDB;
+}
+
+.footer-link:link{
+  color: #B2DFDB;
+}
+
+.footer-link:visited{
+  color: #B2DFDB;
+}
+
+.footer-link:hover{
+  color: #009688;
+}
+
+.footer-link:active{
+  color: #009688;
+}
+
+.footer-link:focus{
+  color: #009688;
+}
+
+/* dev-link */
+
+.dev-link {
+  color: #B2DFDB;
+  text-decoration: none;
+  
+}
+
+.dev-link:link{
+  color: #B2DFDB;
+  text-decoration: none;
+}
+
+.dev-link:visited{
+  color: #B2DFDB;
+  text-decoration: none;
+}
+
+.dev-link:hover{
+  color: #009688;
+  text-decoration: none;
+}
+
+.dev-link:active{
+  color: #009688;
+  text-decoration: none;
+}
+
+.dev-link:focus{
+  color: #009688;
+  text-decoration: none;
+}
+
+/* 
+Scroll to top
+*/
+
+.scroll-to-top {
+  position: relative;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  border-collapse: 100%;
+  background: #009688;
+  color: #fff;
+  z-index: 1;
+}
+.scroll-to-top .icon {
+  margin-top: 10px;
+  animation: scrollTop 0.5s alternate ease infinite;
+}
+@keyframes scrollTop {
+  from {
+      transform: translateY(2px);
+  }
+  to {
+      transform: translateY(-1px);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*section 1 */
+.jumbotron {
+  background-color: #009688;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +140,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.jumbotron h2 {
+  color: #B2DFDB;
 }
