--- a/src/App.css
+++ b/src/App.css
@@ -130,8 +130,9 @@ Scroll to top
 
 /*section 1 */
 .jumbotron {
+  margin: 0em;
   background-color: #009688;
-  min-height: 90vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -142,4 +143,28 @@ Scroll to top
 
 .jumbotron h2 {
   color: #B2DFDB;
+}
+
+.directory-container {
+  margin: 0em;
+  background-color: black;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.contactus-container {
+  margin: 0em;
+  background-color: blueviolet;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
