--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,23 @@
 /* footer */
 
 .site-footer {
+  display: flex;
+  flex-direction: column;
   background-color: #353535;
-  padding: 20px 0;
+  min-height: 70vh;
+  display: flex;
+  font-size: calc(10px + 2vmin);
+}
+
+.container-footer {
+  margin-top: 50px;
+  margin-bottom: 0px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .footer-link {
+  font-size: 20px;
   color: #B2DFDB;
 }
 
@@ -71,6 +83,7 @@
 /* dev-link */
 
 .dev-link {
+  margin: 0;
   color: #B2DFDB;
   text-decoration: none;
   
@@ -106,11 +119,12 @@ Scroll to top
 */
 
 .scroll-to-top {
+  margin:25px;
   position: relative;
   left: 50%;
   width: 40px;
   height: 40px;
-  border-collapse: 100%;
+  border-radius: 100%;
   background: #009688;
   color: #fff;
   z-index: 1;
@@ -167,4 +181,8 @@ Scroll to top
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.contato-container-desc {
+  margin-top: 65px;
 }
