--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,11 @@
   font-size: calc(10px + 2vmin);
 }
 
+.contato-container-desc {
+  margin-top: 65px;
+  font-size: 10px;
+}
+
 .footer-link {
   font-size: 20px;
   color: #B2DFDB;
@@ -182,7 +187,32 @@ Scroll to top
   padding-left: 50px;
 }
 
-.jumbotron {
+/* section 2*/
+.aboutus-container {
+  margin: 0em;
+  background-color: black;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding: 30px;
+}
+
+.text {
+  font-size: 20px;
+}
+
+/* table */
+.photos {
+  padding: 20px;
+}
+
+/*section 3 */
+
+.portfolio-container {
   margin: 0em;
   background-color: #009688;
   min-height: 100vh;
@@ -194,35 +224,52 @@ Scroll to top
   color: white;
 }
 
-.jumbotron h2 {
-  color: #B2DFDB;
-}
+/*section 4 */
 
-.aboutus-container {
+.client-container {
   margin: 0em;
-  background-color: black;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
-.portfolio-container {
-  margin: 0em;
-  background-color: blueviolet;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title-section {
+  font-weight: bold;
+  margin-top: 85px;
 }
 
-.contato-container-desc {
-  margin-top: 65px;
-  font-size: 10px;
+@media screen and (max-width: 900px) {
+  .carousel-caption {
+    right: 0%;
+    left: 30%;
+    bottom: 10%;
+    padding: 0;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: #000000;
+    opacity: .5;
+    color: white !important;
+    text-align: center;
+  }
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    color: #fff;
+    text-align: center;
+    opacity: .3;
+    transition: opacity .15s ease;
+    background-color: #000000;
+    height: 25px;
+    width: 25px;
+    top: 50%;  
+    margin: 0px 25px;
+  }
 }
