--- a/src/App.css
+++ b/src/App.css
@@ -236,6 +236,60 @@ Scroll to top
   margin-top: 85px;
 }
 
+
+/* Float vertical nav bar*/
+.float-nav-bar {
+  width: 60px;
+  transition: all 0.3s linear;
+  box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 999;
+  bottom: 0px;
+}
+
+.float-nav-bar * {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+.float-nav-bar li {
+  height: 60px;
+  position: relative;
+}
+
+.float-nav-bar li a {
+  color: white;
+  display: block;
+  height: 100%;
+  width: 100%;
+  line-height: 60px;
+  padding-left: 25%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  transition: all .3s linear;
+}
+
+.float-nav-bar li:nth-child(1) a {
+  background: #4267B2;
+}
+
+.float-nav-bar li:nth-child(2) a {
+  background: #25D366;
+}
+
+.float-nav-bar li:nth-child(3) a {
+  background: #E1306C;
+}
+
+.float-nav-bar li a i {
+  position: absolute;
+  top: 17px;
+  left: 20px;
+  font-size: 27px;
+}
+
+
 @media (max-width: 575.98px) { 
   .scroll-container {
     justify-content: center;
